# SideScrollerShooter

./: CMakeLists.txt  README.md  game.sln  game.vcxproj  game.vcxproj.filters
src/: common.h  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  sound.c  sound.h  stage.c  stage.h  structs.h  util.c  util.h
